# os

./: .clang-format  .gitignore  Cargo.toml
03-multiprocessor_programming/: a  demo.c
04-concurrency/: a  peterson_algorithm.c
05-Concurrency control: mutual exclusion/: a
05-mutual_exclusion/: futex.c  mutex.c  spin_lock.c
06-synchronization/: a  philosopher.c  print_seq.c  producer_consumer.c  producer_consumer_atomic_integer.c  producer_consumer_mutax_lock.c  producer_consumer_semaphore.c
08-concurrency_bugs/: lockdep_example.c
09-os_state_machine/: thread-os.c
10-state_machine_application/: CMakeLists.txt  ilp-demo.c
11-process/: CMakeLists.txt  execve-demo.c  fork-demo.c  fork-printf.c
12-process_address/: CMakeLists.txt  file_mapping.c  mmap-alloc.c  ptr2main.c
13-syscall_and_shell/: CMakeLists.txt  sh  sh-xv6.c
14-c_stdlib/: CMakeLists.txt  sizeof_.c  sys_.c
15-fork/: cow_test.c
os-3pieces/04-process/: process.md
os-3pieces/05-process_api/: exec_.c  fork_.c  p4.c  p4.output  wait_.c  waitpid_.c
os-3pieces/06-direct_execution/: syscall_ctxswich.py
os-3pieces/07-cpu_scheduling/: cpu_schedule.py
os-3pieces/08-cpu-sched-mlfq/: mlfq.py
os-3pieces/09-cpu-sched-lottery/: cfs.py
os-3pieces/10-multi-cpu-sched/: multi-cpu-sched.py
os-3pieces/14-memory-api/: mmap_.c  sbrk_.c
os-3pieces/15-addr_translation/: addr_translator.py
os-3pieces/16-segmentation/: seg.py
os-3pieces/17-freespa-mng/: slab_allocator.c
os-3pieces/18-paging/: vaddress_translate.py
os-3pieces/19-tlbs/: tlb.py
os-3pieces/20-smalltables/: vaddr_trans.py
os-3pieces/20-smalltables/vaddr_trans/: Cargo.toml
os-3pieces/20-smalltables/vaddr_trans/src/: main.rs
os-3pieces/21-swapping/almost_lru/: Cargo.toml
os-3pieces/21-swapping/almost_lru/src/: main.rs
os-3pieces/21-swapping/vmem_swapping/: Cargo.toml
os-3pieces/21-swapping/vmem_swapping/src/: main.rs
os-3pieces/23-vax-system/: vax.md
os-3pieces/23-vax-system/vax_sys/: Cargo.toml
os-3pieces/23-vax-system/vax_sys/src/: main.rs
os-3pieces/26-threads/closure_/: Cargo.toml
os-3pieces/26-threads/pthread_rust/: Cargo.toml
os-3pieces/26-threads/pthread_rust/src/: main.rs
os-3pieces/27-threads-api/: cond_var.c  pthread_mutex.c
os-3pieces/27-threads-api/cond_var/: Cargo.toml
os-3pieces/27-threads-api/mutex_lock/: Cargo.toml
os-3pieces/28-locks/: compare_and_swap.c
os-3pieces/28-locks/compare_and_swap/: Cargo.toml
os-3pieces/28-locks/ll_and_sc/: Cargo.toml
os-3pieces/28-locks/ll_and_sc/src/: main.rs
os-jyy/03-multiprocessor_programming/: demo.c  thread.h
os-jyy/04-concurrency/: peterson_algorithm.c
os-jyy/06-synchronization/: CMakeLists.txt  producer_consumer_atomic_integer.c
os-jyy/08-concurrency_bugs/: CMakeLists.txt  tsan_demo.cpp
os-jyy/10-state_machine_application/: CMakeLists.txt
os-jyy/11-process/: CMakeLists.txt  exit-demo.c  fork-printf.c
os-jyy/12-process_address/: example.txt  minimal.s  vdso.c
os-jyy/13-syscall_and_shell/: signal-handler.c
os-jyy/14-c_stdlib/: CMakeLists.txt  env_.c
(+4 files in other folders)
